Fixed post list spacing. Added important.

--- a/components/PostList.module.scss
+++ b/components/PostList.module.scss
@@ -1,7 +1,7 @@
 .postList {
     ol {
         padding: 0;
-        margin-left: 0;
+        margin-left: 0 !important;
 
         li {
             margin: 1rem 0 5rem 0;
